--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="manifest" href="./manifest.json" />
     
-    <title>Sapient Project</title>
+    <title>Health & Glow Project</title>
   </head>
   <body style="background-color: #f2f2f2;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
