--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     
     <title>Health & Glow Project</title>
   </head>
-  <body style="background-color: #f2f2f2;">
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
